@@ -3,7 +3,9 @@ DOMjudge Programming Contest Judging System
 Version 2.0.0 - SVN
 -------------------
  - Small-time cleanups.
- - Use either wget or curl for downloading LaTeX packages.	
+ - Use either wget or curl for downloading LaTeX packages.
+ - Remove 'NOW()' from SQL update/insert queries to make replication
+   time-independent.
 
 Version 2.0.0 Release Candidate 1 - 28 May 2007
 -----------------------------------------------
